--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <style>
     :root{
-      --card-bg:#ececec;
+      --card-bg:#FFFFFF;
       --dark-bg:#2b2b2b;
 
-      --tab-active-bg:#ffffff;
+      --tab-active-bg:#F7F7F7;
       --tab-active-text:#3b6fb6;
       --tab-inactive-text:#1a1c1a;
 
@@ -39,7 +39,7 @@
       margin:0;
       font-family:var(--font);
       background:#fff;
-      color:#000;
+      color:#F7F7F7;
       padding:24px 16px 60px;
     }
 
